--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -27,6 +27,14 @@ html {
 
 
 body{
-   
+    font-family: 'Lato', sans-serif;
 
+    padding-bottom: 300px;
+}
+
+
+.logo{
+    display: inline-block;
+    height: 50px;
+    background-color: red;
 }
