--- a/sass/_quote.scss
+++ b/sass/_quote.scss
@@ -29,6 +29,7 @@
             line-height: 24px;
             text-transform: uppercase;
             font-weight: bold;
+            font-family: 'Lato', helvetica, arial, sans-serif;
         }
 
         &__intro{
@@ -38,7 +39,7 @@
             padding-left: 40px;
             padding-right: 30px;
             position: relative;
-            margin-top: 40px;
+            margin-top: 20px;
             padding-bottom: 10px;
             &:before{
                 font-family: "FontAwesome";
@@ -59,10 +60,15 @@
         }
 
         &__subtitle{
+            margin-top: 20px;
             font-size: 18px;
-            list-style: 20px;
-            margin: 30px 0 0 0;
-
+            line-height: 20px;
+            font-family: 'Lato', helvetica, arial, sans-serif;
         }
     }
+}
+
+
+.quote-bg{
+    background-color: #d8d8d8;
 }
