--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,13 @@ template {
   display: none;
 }
 
+.slick-arrow {
+  background-color: #000;
+  padding: 5px;
+  height: 30px;
+  width: 30px;
+}
+
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -364,10 +371,14 @@ body {
   padding-bottom: 300px;
 }
 
-.logo {
+.corporates-logo {
   display: inline-block;
   height: 50px;
-  background-color: red;
+  text-align: center;
+}
+.corporates-logo img {
+  height: 100%;
+  display: inline-block;
 }
 
 .lesson-card {
