--- a/css/style.css
+++ b/css/style.css
@@ -339,10 +339,12 @@ template {
 }
 
 .slick-arrow {
-  background-color: #000;
   padding: 5px;
   height: 30px;
   width: 30px;
+}
+.slick-arrow:before {
+  color: #da2128;
 }
 
 html {
@@ -381,6 +383,10 @@ body {
   display: inline-block;
 }
 
+.mt50 {
+  margin-top: 50px;
+}
+
 .lesson-card {
   display: table;
   width: 100%;
@@ -407,6 +413,56 @@ body {
   padding: 10px;
   font-size: 12px;
   vertical-align: top;
+}
+
+.endorsers {
+  display: inline-block;
+  width: 150px;
+}
+.endorsers__title {
+  vertical-align: top;
+  padding-top: 13px;
+  padding-right: 35px;
+  display: inline-block;
+}
+
+.video-card__view {
+  border: 1px solid #d8d8d8;
+  width: 100%;
+  height: 300px;
+  position: relative;
+  margin-bottom: 30px;
+}
+.video-card__view iframe {
+  width: 100%;
+  height: 300px;
+  display: none;
+}
+.video-card__place-holder {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.video-card__play {
+  height: 35px;
+  width: 35px;
+  display: block;
+  position: absolute;
+  right: 15px;
+  bottom: -17.5px;
+  cursor: pointer;
+  background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg.png) no-repeat 80% 2px #da2128;
+  border-radius: 50%;
+}
+.video-card__intro {
+  text-align: center;
+  padding: 10px 50px 10px 50px;
+  font-size: 12px;
+  list-style: 16px;
+}
+
+.quotes-block {
+  max-width: 500px;
 }
 
 .quote {
@@ -475,6 +531,63 @@ body {
 
 .quote-bg {
   background-color: #d8d8d8;
+}
+
+.module-block__title {
+  font-weight: bold;
+  font-size: 18px;
+  list-style: 20px;
+  margin-bottom: 5px;
+}
+.module-block__intro {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.cta-btn {
+  padding: 15px 80px 15px 30px;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  transition: 250ms ease all;
+}
+.cta-btn:hover {
+  text-decoration: none;
+  transition: 250ms ease all;
+}
+.cta-btn--yellow {
+  background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg.png) no-repeat 92% 10px #f1ce00;
+  border: 2px solid #f1ce00;
+  color: #ffffff;
+}
+.cta-btn--yellow:hover {
+  color: #000000;
+  background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg-hover.png) no-repeat 92% 10px #ffffff;
+}
+.cta-btn--red {
+  background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg.png) no-repeat 92% 10px #da2128;
+  border: 2px solid #da2128;
+  color: #ffffff;
+}
+.cta-btn--red:hover {
+  color: #000000;
+  background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg-hover-red.png) no-repeat 92% 10px #ffffff;
+}
+
+.form-block {
+  max-width: 300px;
+}
+.form-block__title {
+  padding: 10px;
+  background-color: red;
+  transition: 250ms ease all;
+}
+
+.form-top {
+  position: fixed;
+  top: 10px;
+  right: 20px;
+  transition: 250ms ease all;
 }
 
 /*# sourceMappingURL=style.css.map */
