--- a/sass/_slick-slider.scss
+++ b/sass/_slick-slider.scss
@@ -1,8 +1,11 @@
 
 
 .slick-arrow{
-    background-color: #000;
     padding: 5px;
     height: 30px;
     width: 30px;
+    &:before{
+        color: #da2128;
+    }
 }
+
