--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -4,6 +4,7 @@
     font-size: 18px;
     line-height: 24px;
     transition: 250ms ease all;
+    display: inline-block;
     &:hover{
         text-decoration: none;
         transition: 250ms ease all;
