--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -103,3 +103,57 @@
         list-style: 16px;
     }
 }
+
+
+// info card
+.info-card{
+    
+    border: 1px solid #d8d8d8;
+
+    &__img{
+        display: block;
+        height: 90px;
+        overflow: hidden;
+        img{
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+        }
+    }
+
+    &__icon{
+        display: inline-block;
+        height: 25px;
+        width: 25px;
+        background-color: #000;
+    }
+
+    &__title{
+        margin-top: 5px;
+        margin-bottom: 5px;
+        font-size: 18px;
+        line-height: 20px;
+        font-weight: bold;
+    }
+
+    &__intro{
+        font-size: 12px;
+        line-height: 16px;
+    }
+
+    &__cta{
+        height: 15px;
+        display: block;
+        position: relative;
+        margin-bottom: 5px;
+        &:before{
+            font-family: "FontAwesome";
+            content: "\f061";
+            position: absolute;
+            top: 0;
+            right: 0;
+            font-size: 15px;
+        }
+    }
+
+}
