--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -1,10 +1,18 @@
 .form-block{
     max-width: 300px;
+
+    min-width: 300px;
     &__title{
         padding: 10px;
-    background-color: red;
+    background-color: $red;
+    color: $white;
     transition: 250ms ease all;
     }
+
+}
+
+.form-info{
+    padding: 10px;
 }
 
 
@@ -13,4 +21,40 @@
     top: 10px;
     right: 20px;
     transition: 250ms ease all;
+
+    .form-block__title{
+        position: relative;
+
+        // &::before{
+        // height: 35px;
+        // width: 35px;
+        // display: block;
+        // position: absolute;
+        // right: 15px;
+        // bottom: -17.5px;
+        // cursor: pointer;
+        // background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg.png) no-repeat  #da2128;
+        // }
+
+        &.open{
+            &:before{
+                transform: rotate(180deg);
+                transition: 250ms ease all;
+                transform-origin: center center;
+            }
+        }
+
+        &:before{
+            font-family: "FontAwesome";
+            content: "\f078";
+            height: 25px;
+            position: absolute;
+            top: 8px;
+            right: 15px;
+            font-size: 15px;
+            transition: 250ms ease all;
+            transform-origin: center center;
+        }
+
+    }
 }
