--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -11,6 +11,12 @@ html {
     }
 
 
+
+    p{
+        font-size: 12px;
+        list-style: 16px;
+    }
+
 // Helpers 
 
 // # remove padding between columns 
