--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -59,3 +59,19 @@ body{
 .pad-x10{
     padding: 10px;
 }
+
+
+
+// Bo be moved 
+
+/* Hero background image  */
+.highlight {
+    padding: 50px 20px;
+    background:url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/03/RY-online-courses-bg-1.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    border-bottom:5px solid $red;
+    
+   }
