--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -9,10 +9,15 @@
     transition: 250ms ease all;
     }
 
+    @include breakpoint(mobileonly) {
+        width: 100%;
+        max-width: 100%;
+	}
 }
 
 .form-info{
     padding: 10px;
+    background-color: $white;
 }
 
 
@@ -21,6 +26,12 @@
     top: 10px;
     right: 20px;
     transition: 250ms ease all;
+
+    @include breakpoint('small'){
+        top: auto;
+        bottom: 0;
+        width: 100%;
+    }
 
     .form-block__title{
         position: relative;
