updated template 01 with dummy content

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -75,3 +75,69 @@ body{
     border-bottom:5px solid $red;
     
    }
+
+
+
+//    FONTS 
+.text-red{
+    color: $red;
+}
+
+.section-title{
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: bold;
+    &--sub{
+        font-weight: normal;
+    }
+}
+
+
+
+// Profile
+
+.profile{
+
+    &__img{
+        width: 50px;
+        height: 50px;
+        display: inline-block;
+        vertical-align: top;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    &__title{
+        vertical-align: top;
+        width: calc(100% - 55px);
+        font-size: 20px;
+        line-height: 24px;
+        font-weight: bold;
+        display: inline-block;
+        margin: 0;
+        padding-left: 10px;
+    }
+
+    &__sub-title{
+        width: calc(100% - 55px);
+        display: inline-block;
+        font-size: 18px;
+        line-height: 20px;
+        margin: 0;
+        vertical-align: top;
+    }
+
+    &__copy{
+        font-size: 14px;
+        line-height: 16px;
+    }
+}
+
+
+.graduate,.contributor{
+    padding: 10px;
+}
+
