--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,4 @@
+@import "temporary";
 @import "mixins";
 @import "vars";
 @import "normalise";
@@ -8,3 +9,4 @@
 @import "modules";
 @import "buttons";
 @import "form";
+@import "lists";
