--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -3,3 +3,10 @@ $yellow: #f1ce00;
 $white: #ffffff;
 $black: #000000;
 $lightgray: #d8d8d8;
+
+// video card
+$small-width: 35px;
+$small-height: 35px;
+
+$small-width: 15px;
+$small-height: 15px;
