--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -99,10 +99,11 @@ body{
 .profile{
 
     &__img{
-        width: 50px;
-        height: 50px;
-        display: inline-block;
+        width: 80px;
+        height: 80px;
         vertical-align: top;
+        float: left;
+        margin-right: 10px;
         img{
             width: 100%;
             height: 100%;
@@ -112,32 +113,34 @@ body{
 
     &__title{
         vertical-align: top;
-        width: calc(100% - 55px);
-        font-size: 20px;
-        line-height: 24px;
+        width: calc(100% - 95px);
+        font-size: 16px;
+        line-height: 14px;
         font-weight: bold;
-        display: inline-block;
         margin: 0;
-        padding-left: 10px;
+        float: left;
+        margin-bottom: 5px;
     }
 
     &__sub-title{
-        width: calc(100% - 55px);
-        display: inline-block;
-        font-size: 18px;
-        line-height: 20px;
+        width: calc(100% - 95px);
+        font-size: 14px;
+        line-height: 16px;
         margin: 0;
         vertical-align: top;
+        float: left;
+        margin-bottom: 5px;
     }
 
     &__copy{
-        font-size: 14px;
+        font-size: 12px;
         line-height: 16px;
+        display: inherit;
     }
 }
 
 
 .graduate,.contributor{
-    padding: 10px;
+    padding: 20px;
 }
 
