--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -88,12 +88,20 @@
         width: 35px;
         display: block;
         position: absolute;
-        right: 15px;
-        bottom: -17.5px;
         cursor: pointer;
-
         background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/themes/red-yellow/resources/assets/img/icon_btn-lrg.png) no-repeat 80% 2px #da2128;
         border-radius: 50%;
+
+        &--bottom-right{
+            right: 15px;
+            bottom: -17.5px;
+        }
+
+        &--center{
+            right: calc(50% - 17.5px/2);
+            bottom: calc(50% - 17.5px);
+        }
+
     }
 
     &__intro{
