--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -116,7 +116,7 @@
 // info card
 .info-card{
     
-    border: 1px solid #d8d8d8;
+    // border: 1px solid #d8d8d8;
 
     &__img{
         display: block;
@@ -131,22 +131,25 @@
 
     &__icon{
         display: inline-block;
-        height: 25px;
-        width: 25px;
-        background-color: #000;
+        height: 35px;
+        width: 35px;
+        i{
+            font-size: 35px;
+            color: $red;
+        }
     }
 
     &__title{
-        margin-top: 5px;
-        margin-bottom: 5px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         font-size: 18px;
         line-height: 20px;
         font-weight: bold;
     }
 
     &__intro{
-        font-size: 12px;
-        line-height: 16px;
+        font-size: 14px;
+        line-height: 20px;
     }
 
     &__cta{
@@ -155,12 +158,13 @@
         position: relative;
         margin-bottom: 5px;
         &:before{
-            font-family: "FontAwesome";
+            font-family: "Font Awesome 5 Free";
             content: "\f061";
             position: absolute;
             top: 0;
             right: 0;
             font-size: 15px;
+            font-weight: 900;
         }
     }
 
