--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-@import "temporary";
+// @import "temporary";
 @import "mixins";
 @import "vars";
 @import "normalise";
@@ -9,4 +9,6 @@
 @import "modules";
 @import "buttons";
 @import "form";
+@import "fonts";
+@import "footer";
 @import "lists";
