--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,146 +1,166 @@
-// Declare box sizing
-html {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    -webkit-box-sizing: inherit;
-    -moz-box-sizing: inherit;
-    box-sizing: inherit;
-    }
+ /* --------------------------
+
+  For Base Global Styling
+
+  --------------------------*/
+
+ // Declare box sizing
+ html {
+     -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+     box-sizing: border-box;
+ }
+
+ *,
+ *:before,
+ *:after {
+     -webkit-box-sizing: inherit;
+     -moz-box-sizing: inherit;
+     box-sizing: inherit;
+ }
+
+
+ // Helpers 
+
+ .plx30 {}
+
+ // # remove padding between columns 
+ .row.no-pad>[class*='col-'] {
+     padding-right: 0;
+     padding-left: 0;
+ }
+
+ // # 5 padding
+
+ .row.pad-x-5>[class*='col-'] {
+     padding: 5px;
+ }
+
+
+ body {
+     font-family: 'Lato', sans-serif;
+ }
+
+
+ .corporates-logo {
+     display: inline-block;
+     height: 50px;
+     text-align: center;
+
+     // background-color: red;
+     img {
+         height: 100%;
+         display: inline-block;
+     }
+ }
+
+
+ // Helpers for testing
+ .mt50 {
+     margin-top: 50px;
+ }
+
+ .pad-x10 {
+     padding: 10px;
+ }
+
+
+ .full {
+     width: 100%;
+ }
+
+
+ // Bo be moved 
+
+ /* Hero background image  */
+ .highlight {
+     padding: 50px 20px;
+     background: url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/03/RY-online-courses-bg-1.jpg);
+     background-position: center;
+     background-repeat: no-repeat;
+     background-size: cover;
+
+     border-bottom: 5px solid $red;
+
+ }
 
 
 
-    p{
-        font-size: 12px;
-        list-style: 16px;
-    }
+ //    FONTS 
+ .text-red {
+     color: $red;
+ }
 
-// Helpers 
+ .section-title {
+     font-size: 20px;
+     line-height: 28px;
+     font-weight: bold;
+     margin-bottom: 10px;
 
-// # remove padding between columns 
-.row.no-pad > [class*='col-'] {
-    padding-right:0;
-    padding-left:0;
-}
-
-// # 5 padding
-
-.row.pad-x-5 > [class*='col-'] {
-    padding: 5px;
-}
-
-
-body{
-    font-family: 'Lato', sans-serif;
-
-    padding-bottom: 300px;
-}
-
-
-.corporates-logo{
-    display: inline-block;
-    height: 50px;
-    text-align: center;
-    // background-color: red;
-    img{
-        height: 100%;
-        display: inline-block;
-    }
-}
-
-
-// Helpers for testing
-.mt50{
-    margin-top: 50px;
-}
-
-.pad-x10{
-    padding: 10px;
-}
+     &--sub {
+         font-weight: normal;
+         font-size: 20px;
+         line-height: 28px;
+         margin-bottom: 10px;
+     }
+ }
 
 
 
-// Bo be moved 
+ // Profile
 
-/* Hero background image  */
-.highlight {
-    padding: 50px 20px;
-    background:url(https://red-and-yellow-icmfxmvdkqz7ku.stackpathdns.com/content/uploads/2019/03/RY-online-courses-bg-1.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+ .profile {
 
-    border-bottom:5px solid $red;
-    
-   }
+     &__img {
+         width: 80px;
+         height: 80px;
+         vertical-align: top;
+         float: left;
+         margin-right: 10px;
 
+         img {
+             width: 100%;
+             height: 100%;
+             object-fit: cover;
+         }
+     }
 
+     &__title {
+         vertical-align: top;
+         width: calc(100% - 95px);
+         font-size: 16px;
+         line-height: 14px;
+         font-weight: bold;
+         margin: 0;
+         float: left;
+         margin-bottom: 5px;
+     }
 
-//    FONTS 
-.text-red{
-    color: $red;
-}
+     &__sub-title {
+         width: calc(100% - 95px);
+         font-size: 14px;
+         line-height: 16px;
+         margin: 0;
+         vertical-align: top;
+         float: left;
+         margin-bottom: 5px;
+     }
 
-.section-title{
-    font-size: 20px;
-    line-height: 28px;
-    font-weight: bold;
-    &--sub{
-        font-weight: normal;
-    }
-}
-
-
-
-// Profile
-
-.profile{
-
-    &__img{
-        width: 80px;
-        height: 80px;
-        vertical-align: top;
-        float: left;
-        margin-right: 10px;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
-    &__title{
-        vertical-align: top;
-        width: calc(100% - 95px);
-        font-size: 16px;
-        line-height: 14px;
-        font-weight: bold;
-        margin: 0;
-        float: left;
-        margin-bottom: 5px;
-    }
-
-    &__sub-title{
-        width: calc(100% - 95px);
-        font-size: 14px;
-        line-height: 16px;
-        margin: 0;
-        vertical-align: top;
-        float: left;
-        margin-bottom: 5px;
-    }
-
-    &__copy{
-        font-size: 12px;
-        line-height: 16px;
-        display: inherit;
-    }
-}
+     &__copy {
+         font-size: 12px;
+         line-height: 16px;
+         display: inherit;
+     }
+ }
 
 
-.graduate,.contributor{
-    padding: 20px;
-}
+ .graduate,
+ .contributor {
+     padding: 20px;
+ }
 
+
+ .logo {
+     padding: 0 0 10px 0;
+     margin-bottom: 30px;
+ }
