--- a/sass/_quote.scss
+++ b/sass/_quote.scss
@@ -14,8 +14,9 @@
         width: 100px;
         border-radius: 50%;
         overflow: hidden; 
-        float: right;
-        margin-top: 30px;
+        vertical-align: top;
+        margin-top: 10px;
+        margin-right: 20px;
         img{
             height: 100%;
             width: 100%;
@@ -47,20 +48,26 @@
             margin-top: 20px;
             padding-bottom: 10px;
             &:before{
-                font-family: "FontAwesome";
+                font-family: "Font Awesome 5 Free" !important;
                 content: '\f10d';
                 position: absolute;
                 top: 0;
                 left: 0;
                 font-size: 30px;
+                font-style: normal;
+                font-weight: 900;
+                text-decoration: inherit;
             }
             &:after{
-                font-family: "FontAwesome";
+                font-family: "Font Awesome 5 Free" !important;
                 content: '\f10e';
                 position: absolute;
                 bottom: -10px;
                 right: 0;
                 font-size: 30px;
+                font-style: normal;
+                font-weight: 900;
+                text-decoration: inherit;
             }
         }
 
