--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -18,5 +18,24 @@ BREAKPOINTS
    @else if $point == mobileonly {
       @media (max-width: 480px)  { @content ; }
    }
+   @else if $point == tabletup{ 
+      @media (min-width: 481px)  { @content ; }
+   }
+   @else if $point == tabletdown{ 
+      @media (min-width: 768px) and (max-width: 800px) { @content ; }
+   }
  }
  
+
+//  Bounce animation 
+@keyframes bounce {
+   0%, 20%, 50%, 80%, 100% {
+     transform: translateY(0);
+   }
+   40% {
+     transform: translateY(-7px);
+   }
+   60% {
+     transform: translateY(-3px);
+   }
+ }
