--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -5,6 +5,9 @@ $yellow: #f1ce00;
 $white: #ffffff;
 $black: #000000;
 $lightgray: #d8d8d8;
+$darkgray: #565759;
+
+$green: #2a8947;
 
 // video card
 $small-width: 35px;
